--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -98,3 +98,7 @@ address=/wikiwand.com/219.76.4.3
 address=/twitch.tv/219.76.4.3
 address=/jtvnw.net/219.76.4.3
 address=/ttvnw.net/219.76.4.3
+
+#tumblr
+address=/tumblr.com/219.76.4.3
+address=/tumblr.co/219.76.4.3
