--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -102,3 +102,7 @@ address=/ttvnw.net/219.76.4.3
 #tumblr
 address=/tumblr.com/219.76.4.3
 address=/tumblr.co/219.76.4.3
+
+#Instagram 
+address=/instagram.com/219.76.4.3
+address=/akamaihd.net/119.207.64.184
