--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,6 +1,6 @@
 # Copyright (c) 2014-2017, fengixng
 # https://github.com/fengixng/google-hosts
-# Last updated: 2017-07-10
+# Last updated: 2017-07-16
 
 addn-hosts=/etc/dnsmasq.hosts
 address=/gvt1.com/211.22.145.212
@@ -20,6 +20,7 @@ address=/appspot.com/211.22.145.212
 address=/googlesyndication.com/211.22.145.212
 address=/googleadservices.com/211.22.145.212
 address=/blogspot.com/211.22.145.212
+address=/blogspot.fr/211.22.145.212
 address=/googleartproject.com/211.22.145.212
 address=/googledrive.com/211.22.145.212
 address=/googlegroups.com/211.22.145.212
@@ -57,6 +58,7 @@ address=/abc.xyz/211.22.145.212
 address=/service.urchin.com/211.22.145.212
 address=/withgoogle.com/211.22.145.212
 address=/blogblog.com/211.22.145.212
+
 
 
 # Facebook Start
